Skip to content

3.0 regression: VA-DRM decoding no more

It just won't work anymore. VLC falls back to software decoding.

97849bc67d3e285b0d7d164ad25d9b6ec68f2656 is the first bad commit
commit 97849bc67d3e285b0d7d164ad25d9b6ec68f2656
Author: Thomas Guillem <thomas@gllm.fr>
Date:   Fri Feb 10 11:10:23 2017 +0100

    opengl: add converter_vaapi
    
    This converter allow to render a va_surface directly to a GL surface via EGL
    (X11/WAYLAND and EXT_image_dma_buf_import[1]).
    
    [1]: https://www.khronos.org/registry/EGL/extensions/EXT/EGL_EXT_image_dma_buf_import.txt.

:040000 040000 389681090d9b14ebbd7651e5e9933946b8c3f682 ff5ae618dc256c860b9c57e0ad988045e67af485 M      modules
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information