gl: vaapi: add DRM support

Favor DRM and use X11/WAYLAND if it's not available.

Fixes #18445